syntax = "proto3";

package calculator;

option go_package = "github.com/saeedjhn/go-grpc/calculator/goproto";

message MaxRequest {
  int32 n = 1;
}

message MaxResponse {
  int32 Result = 1;
}
