syntax = "proto3";

package calculator;

option go_package = "github.com/saeedjhn/go-grpc/calculator/goproto";

message PrimesRequest {
  int32 n = 1;
}

message PrimesResponse {
  int32 result = 1;
}