syntax = "proto3";

package calculator;

option go_package = "github.com/saeedjhn/go-grpc/calculator/goproto";

message SqrtRequest {
  int32 n = 1;
}

message SqrtResponse {
  double result = 1;
}
